--- a/index.html
+++ b/index.html
@@ -394,17 +394,17 @@
       <td id="nickel" class="solids" tabindex="0">
            <ul>
              <li data-atomicnumber="28"><span class="bigfont1" aria-label="atomic number 28">28</span></li>
-             <li data-symbol="ni" aria-label="atomic symbol N i " class="bigfont2">N<span class="letter-tight">i</span></li>
-             <li data-element="nickel"><span class="bigfont1" aria-label="element">Nickel</span></li>
-             <li data-weight="58.693"><span class="bigfont1" aria-label="standard atomic weight 58 . 6 9 3">58.693</span></li>
-             <li data-groundstate="nickel"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
-             <li data-ev="7.6399"><span class="bigfont1" aria-label="ionization energy 7 . 6 3 9 9">7.6399</span></li> 
+             <li data-symbol="cu" aria-label="atomic symbol N i " class="bigfont2">N<span class="letter-tight">i</span></li>
+             <li data-element="copper"><span class="bigfont1" aria-label="element">Copper</span></li>
+             <li data-weight="63.546"><span class="bigfont1" aria-label="standard atomic weight 63 . 5 4 6">63.546</span></li>
+             <li data-groundstate="copper"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-ev="7.7264"><span class="bigfont1" aria-label="ionization energy 7 . 7 2 6 4">7.7264</span></li> 
           </ul>
       </td>
       <td id="copper" class="solids" tabindex="0">
             <ul>
-             <li data-atomicnumber="28"><span class="bigfont1" aria-label="atomic number 28">28</span></li>
-             <li data-symbol="ni" aria-label="atomic symbol N i " class="bigfont2">N<span class="letter-tight">i</span></li>
+             <li data-atomicnumber="29"><span class="bigfont1" aria-label="atomic number 29">29</span></li>
+             <li data-symbol="ni" aria-label="atomic symbol C u " class="bigfont2">C<span class="letter-tight">u</span></li>
              <li data-element="nickel"><span class="bigfont1" aria-label="element">Nickel</span></li>
              <li data-weight="58.693"><span class="bigfont1" aria-label="standard atomic weight 58 . 6 9 3">58.693</span></li>
              <li data-groundstate="nickel"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
