--- a/index.html
+++ b/index.html
@@ -280,7 +280,6 @@
       </td>
       <td id="chlorine" class="gases" tabindex="0">
            <ul>
-            <ul>
              <li data-atomicnumber="17"><span class="bigfont1" aria-label="atomic number 17">17</span></li>
              <li data-symbol="cl" aria-label="atomic symbol C l" class="bigfont2">C<span class="letter-tight">l</span></li>
              <li data-element="chlorine"><span class="bigfont1" aria-label="element">Chlorine</span></li>
@@ -411,7 +410,16 @@
              <li data-ev="7.6399"><span class="bigfont1" aria-label="ionization energy 7 . 6 3 9 9">7.6399</span></li> 
           </ul>
       </td>
-      <td>Row 4, Cell 11</td>
+      <td id="zinc" class="solids" tabindex="0">
+            <ul>
+             <li data-atomicnumber="30"><span class="bigfont1" aria-label="atomic number 30">30</span></li>
+             <li data-symbol="zn" aria-label="atomic symbol Z n " class="bigfont2">Z<span class="letter-tight">n</span></li>
+             <li data-element="zinc"><span class="bigfont1" aria-label="element">Zinc</span></li>
+             <li data-weight="65.38"><span class="bigfont1" aria-label="standard atomic weight 65 . 3 8">65.38</span></li>
+             <li data-groundstate="zinc"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-ev="9.3942"><span class="bigfont1" aria-label="ionization energy 9 . 3 9 4 2">9.3942</span></li> 
+          </ul>
+      </td>
       <td>Row 4, Cell 12</td>
       <td>Row 4, Cell 13</td>
       <td>Row 4, Cell 14</td>
