--- a/index_backup2.html
+++ b/index_backup2.html
@@ -34,7 +34,7 @@
 }
 #table_id th, #table_id td {
   font-weight: bold;
-    border-style: transparent;	
+  border-style:none;	
 }	
 </style>
  </head>
@@ -106,7 +106,6 @@
       <td class="hidden">Row 1, Cell 17</td>
       <td id="helium" class="gases" tabindex="0">
            <ul>
-            <ul>
              <li data-atomicnumber="2"><span class="bigfont1" aria-label="atomic number 2">2</span></li>
              <li data-symbol="he" aria-label="atomic symbol He" class="bigfont2">H<span class="letter-tight" >e</span></li>
              <li data-element="helium"><span class="bigfont1" aria-label="element">Helium</span></li>
@@ -119,7 +118,6 @@
     <tr>
       <td id="lithium" class="solids" tabindex="0">
            <ul>
-            <ul>
              <li data-atomicnumber="3"><span class="bigfont1" aria-label="atomic number 3">3</span></li>
              <li data-symbol="li" aria-label="atomic symbol L i" class="bigfont2">L<span class="letter-tight">i</span></li>
              <li data-element="lithium"><span class="bigfont1" aria-label="element">Lithium</span></li>
@@ -130,7 +128,6 @@
        </td>
       <td id="beryllium" class="solids" tabindex="0">
            <ul>
-            <ul>
              <li data-atomicnumber="4"><span class="bigfont1" aria-label="atomic number 4">4</span></li>
              <li data-symbol="be" aria-label="atomic symbol B e" class="bigfont2">B<span class="letter-tight">e</span></li>
              <li data-element="beryllium"><span class="bigfont1" aria-label="element">Beryllium</span></li>
@@ -151,7 +148,6 @@
       <td class="hidden">Row 2, Cell 12</td>
          <td id="boron" class="solids" tabindex="0">
            <ul>
-            <ul>
              <li data-atomicnumber="5"><span class="bigfont1" aria-label="atomic number 5">5</span></li>
              <li data-symbol="b" aria-label="atomic symbol B" class="bigfont2">B<span class="letter-tight">&nbsp;</span></li>
              <li data-element="boron"><span class="bigfont1" aria-label="element">Boron</span></li>
@@ -162,7 +158,6 @@
        </td>
        <td id="carbon" class="solids" tabindex="0">
            <ul>
-            <ul>
              <li data-atomicnumber="6"><span class="bigfont1" aria-label="atomic number 6">6</span></li>
              <li data-symbol="c" aria-label="atomic symbol C" class="bigfont2">C<span class="letter-tight">&nbsp;</span></li>
              <li data-element="carbon"><span class="bigfont1" aria-label="element">Carbon</span></li>
@@ -173,7 +168,6 @@
        </td>
         <td id="nitrogen" class="gases" tabindex="0">
            <ul>
-            <ul>
              <li data-atomicnumber="7"><span class="bigfont1" aria-label="atomic number 7">7</span></li>
              <li data-symbol="n" aria-label="atomic symbol N" class="bigfont2">N<span class="letter-tight">&nbsp;</span></li>
              <li data-element="nitrogen"><span class="bigfont1" aria-label="element">Nitrogen</span></li>
@@ -184,7 +178,6 @@
        </td>
        <td id="oxygen" class="gases" tabindex="0">
            <ul>
-            <ul>
              <li data-atomicnumber="8"><span class="bigfont1" aria-label="atomic number 8">8</span></li>
              <li data-symbol="o" aria-label="atomic symbol O" class="bigfont2">O<span class="letter-tight">&nbsp;</span></li>
              <li data-element="oxygen"><span class="bigfont1" aria-label="element">Oxygen</span></li>
@@ -195,7 +188,6 @@
        </td>
        <td id="flourine" class="gases" tabindex="0">
            <ul>
-            <ul>
              <li data-atomicnumber="9"><span class="bigfont1" aria-label="atomic number 9">9</span></li>
              <li data-symbol="f" aria-label="atomic symbol F" class="bigfont2">F<span class="letter-tight">&nbsp;</span></li>
              <li data-element="flourine"><span class="bigfont1" aria-label="element">Flourine</span></li>
@@ -206,7 +198,6 @@
        </td>
        <td id="neon" class="gases" tabindex="0">
            <ul>
-            <ul>
              <li data-atomicnumber="10"><span class="bigfont1" aria-label="atomic number 10">10</span></li>
              <li data-symbol="ne" aria-label="atomic symbol N e" class="bigfont2">N<span class="letter-tight">e</span></li>
              <li data-element="neon"><span class="bigfont1" aria-label="element">Neon</span></li>
@@ -219,7 +210,6 @@
     <tr>
       <td id="sodium" class="solids" tabindex="0">
            <ul>
-            <ul>
              <li data-atomicnumber="11"><span class="bigfont1" aria-label="atomic number 11">11</span></li>
              <li data-symbol="na" aria-label="atomic symbol N a" class="bigfont2">N<span class="letter-tight">a</span></li>
              <li data-element="sodium"><span class="bigfont1" aria-label="element">Sodium</span></li>
@@ -230,7 +220,6 @@
       </td>
       <td id="magnesium" class="solids" tabindex="0">
            <ul>
-            <ul>
              <li data-atomicnumber="12"><span class="bigfont1" aria-label="atomic number 12">12</span></li>
              <li data-symbol="mg" aria-label="atomic symbol M g" class="bigfont2">M<span class="letter-tight">g</span></li>
              <li data-element="magnesium"><span class="bigfont1" aria-label="element">Magnesium</span></li>
@@ -251,7 +240,6 @@
       <td class="hidden">Row 3, Cell 12</td>
       <td id="aluminum" class="solids" tabindex="0">
            <ul>
-            <ul>
              <li data-atomicnumber="13"><span class="bigfont1" aria-label="atomic number 13">13</span></li>
              <li data-symbol="al" aria-label="atomic symbol A l" class="bigfont2">A<span class="letter-tight">l</span></li>
              <li data-element="magnesium"><span class="bigfont1" aria-label="element">Aluminum</span></li>
@@ -262,7 +250,6 @@
       </td>
       <td id="silicon" class="solids" tabindex="0">
            <ul>
-            <ul>
              <li data-atomicnumber="14"><span class="bigfont1" aria-label="atomic number 14">14</span></li>
              <li data-symbol="si" aria-label="atomic symbol S i" class="bigfont2">S<span class="letter-tight">i</span></li>
              <li data-element="silicon"><span class="bigfont1" aria-label="element">Silicon</span></li>
@@ -273,7 +260,6 @@
       </td>
       <td id="phosphorus" class="solids" tabindex="0">
            <ul>
-            <ul>
              <li data-atomicnumber="15"><span class="bigfont1" aria-label="atomic number 15">15</span></li>
              <li data-symbol="p" aria-label="atomic symbol P" class="bigfont2">P<span class="letter-tight">&nbsp;</span></li>
              <li data-element="phosphorus"><span class="bigfont1" aria-label="element">Phosphorus</span></li>
@@ -284,7 +270,6 @@
       </td>
       <td id="sulfur" class="solids" tabindex="0">
            <ul>
-            <ul>
              <li data-atomicnumber="16"><span class="bigfont1" aria-label="atomic number 16">16</span></li>
              <li data-symbol="s" aria-label="atomic symbol S" class="bigfont2">S<span class="letter-tight">&nbsp;</span></li>
              <li data-element="sulfur"><span class="bigfont1" aria-label="element">Sulfur</span></li>
@@ -295,7 +280,6 @@
       </td>
       <td id="chlorine" class="gases" tabindex="0">
            <ul>
-            <ul>
              <li data-atomicnumber="17"><span class="bigfont1" aria-label="atomic number 17">17</span></li>
              <li data-symbol="cl" aria-label="atomic symbol C l" class="bigfont2">C<span class="letter-tight">l</span></li>
              <li data-element="chlorine"><span class="bigfont1" aria-label="element">Chlorine</span></li>
@@ -306,7 +290,6 @@
       </td>
       <td id="argon" class="gases" tabindex="0">
            <ul>
-            <ul>
              <li data-atomicnumber="18"><span class="bigfont1" aria-label="atomic number 18">18</span></li>
              <li data-symbol="ar" aria-label="atomic symbol A r" class="bigfont2">A<span class="letter-tight">r</span></li>
              <li data-element="argon"><span class="bigfont1" aria-label="element">Argon</span></li>
@@ -319,7 +302,6 @@
     <tr>
       <td id="potassium" class="solids" tabindex="0">
            <ul>
-            <ul>
              <li data-atomicnumber="19"><span class="bigfont1" aria-label="atomic number 19">19</span></li>
              <li data-symbol="k" aria-label="atomic symbol K" class="bigfont2">K<span class="letter-tight">&nbsp;</span></li>
              <li data-element="potassium"><span class="bigfont1" aria-label="element">Potassium</span></li>
@@ -330,7 +312,6 @@
       </td>
        <td id="calcium" class="solids" tabindex="0">
            <ul>
-            <ul>
              <li data-atomicnumber="20"><span class="bigfont1" aria-label="atomic number 20">20</span></li>
              <li data-symbol="ca" aria-label="atomic symbol C a" class="bigfont2">C<span class="letter-tight">a</span></li>
              <li data-element="calcium"><span class="bigfont1" aria-label="element">Calcium</span></li>
@@ -341,7 +322,6 @@
       </td>
        <td id="scandium" class="solids" tabindex="0">
            <ul>
-            <ul>
              <li data-atomicnumber="21"><span class="bigfont1" aria-label="atomic number 21">21</span></li>
              <li data-symbol="sc" aria-label="atomic symbol S c" class="bigfont2">S<span class="letter-tight">c</span></li>
              <li data-element="scandium"><span class="bigfont1" aria-label="element">Scandium</span></li>
@@ -352,7 +332,6 @@
       </td>       
        <td id="titanium" class="solids" tabindex="0">
            <ul>
-            <ul>
              <li data-atomicnumber="22"><span class="bigfont1" aria-label="atomic number 22">22</span></li>
              <li data-symbol="ti" aria-label="atomic symbol T i" class="bigfont2">T<span class="letter-tight">i</span></li>
              <li data-element="titanium"><span class="bigfont1" aria-label="element">Titanium</span></li>
@@ -363,7 +342,6 @@
       </td>
       <td id="vanadium" class="solids" tabindex="0">
            <ul>
-            <ul>
              <li data-atomicnumber="23"><span class="bigfont1" aria-label="atomic number 23">23</span></li>
              <li data-symbol="v" aria-label="atomic symbol V " class="bigfont2">V<span class="letter-tight">&nbsp;</span></li>
              <li data-element="vanadium"><span class="bigfont1" aria-label="element">Vanadium</span></li>
@@ -374,7 +352,6 @@
       </td>
       <td id="chromium" class="solids" tabindex="0">
            <ul>
-            <ul>
              <li data-atomicnumber="24"><span class="bigfont1" aria-label="atomic number 24">24</span></li>
              <li data-symbol="cr" aria-label="atomic symbol C r " class="bigfont2">C<span class="letter-tight">r</span></li>
              <li data-element="chromium"><span class="bigfont1" aria-label="element">Chromium</span></li>
@@ -385,7 +362,6 @@
       </td>
        <td id="manganese" class="solids" tabindex="0">
            <ul>
-            <ul>
              <li data-atomicnumber="25"><span class="bigfont1" aria-label="atomic number 25">25</span></li>
              <li data-symbol="mn" aria-label="atomic symbol M n " class="bigfont2">M<span class="letter-tight">n</span></li>
              <li data-element="manganese"><span class="bigfont1" aria-label="element">Manganese</span></li>
@@ -396,7 +372,6 @@
       </td>
          <td id="iron" class="solids" tabindex="0">
            <ul>
-            <ul>
              <li data-atomicnumber="26"><span class="bigfont1" aria-label="atomic number 26">26</span></li>
              <li data-symbol="fe" aria-label="atomic symbol F e " class="bigfont2">F<span class="letter-tight">e</span></li>
              <li data-element="iron"><span class="bigfont1" aria-label="element">Iron</span></li>
@@ -407,7 +382,6 @@
       </td>
       <td id="cobalt" class="solids" tabindex="0">
            <ul>
-            <ul>
              <li data-atomicnumber="27"><span class="bigfont1" aria-label="atomic number 27">27</span></li>
              <li data-symbol="co" aria-label="atomic symbol C o " class="bigfont2">C<span class="letter-tight">o</span></li>
              <li data-element="cobalt"><span class="bigfont1" aria-label="element">Cobalt</span></li>
@@ -416,9 +390,36 @@
              <li data-ev="7.8810"><span class="bigfont1" aria-label="ionization energy 7 . 8 8 1 0">7.8810</span></li> 
           </ul>
       </td>
-      <td>Row 4, Cell 9</td>
-      <td>Row 4, Cell 10</td>
-      <td>Row 4, Cell 11</td>
+      <td id="nickel" class="solids" tabindex="0">
+           <ul>
+             <li data-atomicnumber="28"><span class="bigfont1" aria-label="atomic number 28">28</span></li>
+             <li data-symbol="cu" aria-label="atomic symbol N i " class="bigfont2">N<span class="letter-tight">i</span></li>
+             <li data-element="copper"><span class="bigfont1" aria-label="element">Copper</span></li>
+             <li data-weight="63.546"><span class="bigfont1" aria-label="standard atomic weight 63 . 5 4 6">63.546</span></li>
+             <li data-groundstate="copper"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-ev="7.7264"><span class="bigfont1" aria-label="ionization energy 7 . 7 2 6 4">7.7264</span></li> 
+          </ul>
+      </td>
+      <td id="copper" class="solids" tabindex="0">
+            <ul>
+             <li data-atomicnumber="29"><span class="bigfont1" aria-label="atomic number 29">29</span></li>
+             <li data-symbol="ni" aria-label="atomic symbol C u " class="bigfont2">C<span class="letter-tight">u</span></li>
+             <li data-element="nickel"><span class="bigfont1" aria-label="element">Nickel</span></li>
+             <li data-weight="58.693"><span class="bigfont1" aria-label="standard atomic weight 58 . 6 9 3">58.693</span></li>
+             <li data-groundstate="nickel"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-ev="7.6399"><span class="bigfont1" aria-label="ionization energy 7 . 6 3 9 9">7.6399</span></li> 
+          </ul>
+      </td>
+      <td id="zinc" class="solids" tabindex="0">
+            <ul>
+             <li data-atomicnumber="30"><span class="bigfont1" aria-label="atomic number 30">30</span></li>
+             <li data-symbol="zn" aria-label="atomic symbol Z n " class="bigfont2">Z<span class="letter-tight">n</span></li>
+             <li data-element="zinc"><span class="bigfont1" aria-label="element">Zinc</span></li>
+             <li data-weight="65.38"><span class="bigfont1" aria-label="standard atomic weight 65 . 3 8">65.38</span></li>
+             <li data-groundstate="zinc"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-ev="9.3942"><span class="bigfont1" aria-label="ionization energy 9 . 3 9 4 2">9.3942</span></li> 
+          </ul>
+      </td>
       <td>Row 4, Cell 12</td>
       <td>Row 4, Cell 13</td>
       <td>Row 4, Cell 14</td>
@@ -533,7 +534,7 @@
   <div  class="left100">
      <p tabindex="0">This page last modified or reviewed</p>
      <ul>
-        <li>content: 26 November 2019</li>
+        <li>content: 2 December 2019</li>
      </ul>
   </div>
   <!-- https://stackoverflow.com/questions/9127498/how-to-perform-a-real-time-search-and-filter-on-a-html-table -->
