--- a/index_backup1.html
+++ b/index_backup1.html
@@ -34,7 +34,7 @@
 }
 #table_id th, #table_id td {
   font-weight: bold;
-    border-style: transparent;	
+  border-style:none;	
 }	
 </style>
  </head>
@@ -280,7 +280,6 @@
       </td>
       <td id="chlorine" class="gases" tabindex="0">
            <ul>
-            <ul>
              <li data-atomicnumber="17"><span class="bigfont1" aria-label="atomic number 17">17</span></li>
              <li data-symbol="cl" aria-label="atomic symbol C l" class="bigfont2">C<span class="letter-tight">l</span></li>
              <li data-element="chlorine"><span class="bigfont1" aria-label="element">Chlorine</span></li>
@@ -394,25 +393,33 @@
       <td id="nickel" class="solids" tabindex="0">
            <ul>
              <li data-atomicnumber="28"><span class="bigfont1" aria-label="atomic number 28">28</span></li>
-             <li data-symbol="ni" aria-label="atomic symbol N i " class="bigfont2">N<span class="letter-tight">i</span></li>
-             <li data-element="nickel"><span class="bigfont1" aria-label="element">Nickel</span></li>
-             <li data-weight="58.693"><span class="bigfont1" aria-label="standard atomic weight 58 . 6 9 3">58.693</span></li>
-             <li data-groundstate="nickel"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
-             <li data-ev="7.6399"><span class="bigfont1" aria-label="ionization energy 7 . 6 3 9 9">7.6399</span></li> 
+             <li data-symbol="cu" aria-label="atomic symbol N i " class="bigfont2">N<span class="letter-tight">i</span></li>
+             <li data-element="copper"><span class="bigfont1" aria-label="element">Copper</span></li>
+             <li data-weight="63.546"><span class="bigfont1" aria-label="standard atomic weight 63 . 5 4 6">63.546</span></li>
+             <li data-groundstate="copper"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-ev="7.7264"><span class="bigfont1" aria-label="ionization energy 7 . 7 2 6 4">7.7264</span></li> 
           </ul>
       </td>
       <td id="copper" class="solids" tabindex="0">
             <ul>
-             <li data-atomicnumber="28"><span class="bigfont1" aria-label="atomic number 28">28</span></li>
-             <li data-symbol="ni" aria-label="atomic symbol N i " class="bigfont2">N<span class="letter-tight">i</span></li>
+             <li data-atomicnumber="29"><span class="bigfont1" aria-label="atomic number 29">29</span></li>
+             <li data-symbol="ni" aria-label="atomic symbol C u " class="bigfont2">C<span class="letter-tight">u</span></li>
              <li data-element="nickel"><span class="bigfont1" aria-label="element">Nickel</span></li>
              <li data-weight="58.693"><span class="bigfont1" aria-label="standard atomic weight 58 . 6 9 3">58.693</span></li>
              <li data-groundstate="nickel"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
              <li data-ev="7.6399"><span class="bigfont1" aria-label="ionization energy 7 . 6 3 9 9">7.6399</span></li> 
           </ul>
       </td>
-      <td>Row 4, Cell 11</td>
-      <td>Row 4, Cell 12</td>
+      <td id="zinc" class="solids" tabindex="0">
+            <ul>
+             <li data-atomicnumber="30"><span class="bigfont1" aria-label="atomic number 30">30</span></li>
+             <li data-symbol="zn" aria-label="atomic symbol Z n " class="bigfont2">Z<span class="letter-tight">n</span></li>
+             <li data-element="zinc"><span class="bigfont1" aria-label="element">Zinc</span></li>
+             <li data-weight="65.38"><span class="bigfont1" aria-label="standard atomic weight 65 . 3 8">65.38</span></li>
+             <li data-groundstate="zinc"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-ev="9.3942"><span class="bigfont1" aria-label="ionization energy 9 . 3 9 4 2">9.3942</span></li> 
+          </ul>
+      </td>
       <td>Row 4, Cell 13</td>
       <td>Row 4, Cell 14</td>
       <td>Row 4, Cell 15</td>
