--- a/index_backup1.html
+++ b/index_backup1.html
@@ -50,7 +50,8 @@
  <label for="search_field_input">Search Elements (Alphabetical Search):</label>
  <input id="search_field_input" onkeyup="search_table()" type="text">
 </div>
-<!-- IMPORTANT do not change ARIA LABEL.  The aria-label is used to over-ride screen reader mispronunciation of numbers with decimals in them as they apply to atomic weights --> 
+<!-- IMPORTANT do not change ARIA LABEL.  The aria-label is used to over-ride screen reader mispronunciation of numbers with decimals in them as they apply to atomic weights It is not the desired user experience to have the screen reader read the numbers as thousands--> 
+<!-- Excerpt from https://www.w3.org/TR/wai-aria/#aria-label If the label text is visible on screen, authors SHOULD use aria-labelledby and SHOULD NOT use aria-label. There may be instances where the name of an element cannot be determined programmatically from the content of the element, and there are cases where providing a visible label is not the desired user experience. -->    
 <!-- IMPORTANT do not change CSS.  Font kerning used to allow screen readers to pronounce elements by individual letters but fool the eye into thinking the letters are assocated with one another --> 
 <div class="left100">
 <table id="table_id">
