--- a/index_backup1.html
+++ b/index_backup1.html
@@ -34,7 +34,7 @@
 }
 #table_id th, #table_id td {
   font-weight: bold;
-  border-style:none;	
+  border-style: solid 1px black;	
 }	
 </style>
  </head>
@@ -421,7 +421,16 @@
              <li data-ev="9.3942"><span class="bigfont1" aria-label="ionization energy 9 . 3 9 4 2">9.3942</span></li> 
           </ul>
       </td>
-      <td>Row 4, Cell 13</td>
+            <td id="gallium" class="solids" tabindex="0">
+            <ul>
+             <li data-atomicnumber="31"><span class="bigfont1" aria-label="atomic number 31">31</span></li>
+             <li data-symbol="ga" aria-label="atomic symbol G a " class="bigfont2">G<span class="letter-tight">a</span></li>
+             <li data-element="gallium"><span class="bigfont1" aria-label="element">Gallium</span></li>
+             <li data-weight="69.723"><span class="bigfont1" aria-label="standard atomic weight 69 . 7 2 3">69.723</span></li>
+             <li data-groundstate="gallium"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-ev="5.9993"><span class="bigfont1" aria-label="ionization energy 5 . 9 9 9 3">5.9993</span></li> 
+          </ul>
+       </td>
       <td>Row 4, Cell 14</td>
       <td>Row 4, Cell 15</td>
       <td>Row 4, Cell 16</td>
