--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 }
 #table_id th, #table_id td {
   font-weight: bold;
-  border-style: solid 1px #000000;	
+  border: solid 1px #000000;	
 }	
 </style>
  </head>
@@ -441,7 +441,16 @@
              <li data-ev="7.8994"><span class="bigfont1" aria-label="ionization energy 7 . 8 9 9 4">7.8994</span></li> 
           </ul>
        </td>
-      <td>Row 4, Cell 15</td>
+       <td id="arsenic" class="solids" tabindex="0">
+            <ul>
+             <li data-atomicnumber="33"><span class="bigfont1" aria-label="atomic number 33">33</span></li>
+             <li data-symbol="as" aria-label="atomic symbol A s " class="bigfont2">A<span class="letter-tight">s</span></li>
+             <li data-element="arsenic"><span class="bigfont1" aria-label="element">Arsenic</span></li>
+             <li data-weight="74.922"><span class="bigfont1" aria-label="standard atomic weight 74 . 9 2 2">74.922</span></li>
+             <li data-groundstate="arsenic"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-ev="9.7886"><span class="bigfont1" aria-label="ionization energy 9 . 7 8 8 6">9.7886</span></li> 
+          </ul>
+       </td>
       <td>Row 4, Cell 16</td>
       <td>Row 4, Cell 17</td>
       <td>Row 4, Cell 18</td>
