--- a/index_backup2.html
+++ b/index_backup2.html
@@ -34,7 +34,7 @@
 }
 #table_id th, #table_id td {
   font-weight: bold;
-  border-style: solid 1px black;	
+  border: solid 1px #000000;	
 }	
 </style>
  </head>
@@ -420,8 +420,8 @@
              <li data-groundstate="zinc"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
              <li data-ev="9.3942"><span class="bigfont1" aria-label="ionization energy 9 . 3 9 4 2">9.3942</span></li> 
           </ul>
-      </td>
-            <td id="gallium" class="solids" tabindex="0">
+        </td>
+        <td id="gallium" class="solids" tabindex="0">
             <ul>
              <li data-atomicnumber="31"><span class="bigfont1" aria-label="atomic number 31">31</span></li>
              <li data-symbol="ga" aria-label="atomic symbol G a " class="bigfont2">G<span class="letter-tight">a</span></li>
@@ -431,8 +431,26 @@
              <li data-ev="5.9993"><span class="bigfont1" aria-label="ionization energy 5 . 9 9 9 3">5.9993</span></li> 
           </ul>
        </td>
-      <td>Row 4, Cell 14</td>
-      <td>Row 4, Cell 15</td>
+       <td id="germanium" class="solids" tabindex="0">
+            <ul>
+             <li data-atomicnumber="32"><span class="bigfont1" aria-label="atomic number 32">32</span></li>
+             <li data-symbol="ge" aria-label="atomic symbol G e " class="bigfont2">G<span class="letter-tight">e</span></li>
+             <li data-element="germanium"><span class="bigfont1" aria-label="element">Germanium</span></li>
+             <li data-weight="72.630"><span class="bigfont1" aria-label="standard atomic weight 72 . 6 3 0">72.630</span></li>
+             <li data-groundstate="germanium"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-ev="7.8994"><span class="bigfont1" aria-label="ionization energy 7 . 8 9 9 4">7.8994</span></li> 
+          </ul>
+       </td>
+       <td id="arsenic" class="solids" tabindex="0">
+            <ul>
+             <li data-atomicnumber="33"><span class="bigfont1" aria-label="atomic number 33">33</span></li>
+             <li data-symbol="as" aria-label="atomic symbol A s " class="bigfont2">A<span class="letter-tight">s</span></li>
+             <li data-element="arsenic"><span class="bigfont1" aria-label="element">Arsenic</span></li>
+             <li data-weight="74.922"><span class="bigfont1" aria-label="standard atomic weight 74 . 9 2 2">74.922</span></li>
+             <li data-groundstate="arsenic"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-ev="9.7886"><span class="bigfont1" aria-label="ionization energy 9 . 7 8 8 6">9.7886</span></li> 
+          </ul>
+       </td>
       <td>Row 4, Cell 16</td>
       <td>Row 4, Cell 17</td>
       <td>Row 4, Cell 18</td>
