--- a/index.html
+++ b/index.html
@@ -451,7 +451,16 @@
              <li data-ev="9.7886"><span class="bigfont1" aria-label="ionization energy 9 . 7 8 8 6">9.7886</span></li> 
           </ul>
        </td>
-      <td>Row 4, Cell 16</td>
+       <td id="selenium" class="solids" tabindex="0">
+            <ul>
+             <li data-atomicnumber="34"><span class="bigfont1" aria-label="atomic number 34">34</span></li>
+             <li data-symbol="se" aria-label="atomic symbol S e " class="bigfont2">S<span class="letter-tight">e</span></li>
+             <li data-element="selenium"><span class="bigfont1" aria-label="element">Selenium</span></li>
+             <li data-weight="78.971"><span class="bigfont1" aria-label="standard atomic weight78 . 9 7 1">78.971</span></li>
+             <li data-groundstate="selenium"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-ev="9.7524"><span class="bigfont1" aria-label="ionization energy 9 . 7 5 2 4">9.7524</span></li> 
+          </ul>
+       </td>
       <td>Row 4, Cell 17</td>
       <td>Row 4, Cell 18</td>
     </tr>
