--- a/index.html
+++ b/index.html
@@ -456,12 +456,21 @@
              <li data-atomicnumber="34"><span class="bigfont1" aria-label="atomic number 34">34</span></li>
              <li data-symbol="se" aria-label="atomic symbol S e " class="bigfont2">S<span class="letter-tight">e</span></li>
              <li data-element="selenium"><span class="bigfont1" aria-label="element">Selenium</span></li>
-             <li data-weight="78.971"><span class="bigfont1" aria-label="standard atomic weight78 . 9 7 1">78.971</span></li>
+             <li data-weight="78.971"><span class="bigfont1" aria-label="standard atomic weight 78 . 9 7 1">78.971</span></li>
              <li data-groundstate="selenium"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
              <li data-ev="9.7524"><span class="bigfont1" aria-label="ionization energy 9 . 7 5 2 4">9.7524</span></li> 
           </ul>
        </td>
-      <td>Row 4, Cell 17</td>
+       <td id="bromine" class="liquids" tabindex="0">
+            <ul>
+             <li data-atomicnumber="35"><span class="bigfont1" aria-label="atomic number 35">35</span></li>
+             <li data-symbol="br" aria-label="atomic symbol B r " class="bigfont2">B<span class="letter-tight">r</span></li>
+             <li data-element="bromine"><span class="bigfont1" aria-label="element">Bromine</span></li>
+             <li data-weight="79.904"><span class="bigfont1" aria-label="standard atomic weight 79 . 9 0 4">79.904</span></li>
+             <li data-groundstate="bromine"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-ev="11.8138"><span class="bigfont1" aria-label="ionization energy 11 . 8 1 3 8">11.8138</span></li> 
+          </ul>
+       </td>
       <td>Row 4, Cell 18</td>
     </tr>
     <tr>
