--- a/index.html
+++ b/index.html
@@ -483,7 +483,16 @@
        </td>
     </tr>
     <tr>
-      <td>Row 5, Cell 1</td>
+         <td id="rubidium" class="solids" tabindex="0">
+            <ul>
+             <li data-atomicnumber="37"><span class="bigfont1" aria-label="atomic number 37">37</span></li>
+             <li data-symbol="rb" aria-label="atomic symbol R b " class="bigfont2">R<span class="letter-tight">b</span></li>
+             <li data-element="rubidium"><span class="bigfont1" aria-label="element">Rubidium</span></li>
+             <li data-weight="85.468"><span class="bigfont1" aria-label="standard atomic weight 85.468">85.468</span></li>
+             <li data-groundstate="rubidium"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-ev="4.1771"><span class="bigfont1" aria-label="ionization energy 4 . 1 7 7 1">4.1771</span></li> 
+          </ul>
+       </td>
       <td>Row 5, Cell 2</td>
       <td>Row 5, Cell 3</td>
       <td>Row 5, Cell 4</td>
