--- a/index_backup2.html
+++ b/index_backup2.html
@@ -471,10 +471,28 @@
              <li data-ev="11.8138"><span class="bigfont1" aria-label="ionization energy 11 . 8 1 3 8">11.8138</span></li> 
           </ul>
        </td>
-      <td>Row 4, Cell 18</td>
+       <td id="krypton" class="gases" tabindex="0">
+            <ul>
+             <li data-atomicnumber="36"><span class="bigfont1" aria-label="atomic number 36">36</span></li>
+             <li data-symbol="kr" aria-label="atomic symbol K r " class="bigfont2">K<span class="letter-tight">r</span></li>
+             <li data-element="krypton"><span class="bigfont1" aria-label="element">Krypton</span></li>
+             <li data-weight="83.798"><span class="bigfont1" aria-label="standard atomic weight 83 . 7 9 8">83.798</span></li>
+             <li data-groundstate="krypton"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-ev="13.9996"><span class="bigfont1" aria-label="ionization energy 13 . 9 9 9 6">13.9996</span></li> 
+          </ul>
+       </td>
     </tr>
     <tr>
-      <td>Row 5, Cell 1</td>
+         <td id="rubidium" class="solids" tabindex="0">
+            <ul>
+             <li data-atomicnumber="37"><span class="bigfont1" aria-label="atomic number 37">37</span></li>
+             <li data-symbol="rb" aria-label="atomic symbol R b " class="bigfont2">R<span class="letter-tight">b</span></li>
+             <li data-element="rubidium"><span class="bigfont1" aria-label="element">Rubidium</span></li>
+             <li data-weight="85.468"><span class="bigfont1" aria-label="standard atomic weight 85.468">85.468</span></li>
+             <li data-groundstate="rubidium"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-ev="4.1771"><span class="bigfont1" aria-label="ionization energy 4 . 1 7 7 1">4.1771</span></li> 
+          </ul>
+       </td>
       <td>Row 5, Cell 2</td>
       <td>Row 5, Cell 3</td>
       <td>Row 5, Cell 4</td>
