--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
  </head>
 
  <body>
+ <main>
 <div class="left100 bottom50">
 <h1>Searchable Periodic Table</h1>
 <p tabindex="0">The elements are set up in a table, one element per cell. Each table cell contains the name of the element, and a list of five items containing the atomic number, the atomic symbol, the atomic weight, the ground state configuration, and the ionization energy.</p>
@@ -603,12 +604,17 @@
   </tbody>
 </table>
      </div>
+    </main>
+    <footer>
   <div  class="left100">
      <p tabindex="0">This page last modified or reviewed</p>
      <ul>
         <li>content: 2 December 2019</li>
+        <li>WebAim: 2 December 2019 0</li>
+        <li>NuHTML: 2 December 2019 aria-label warnings</li>
      </ul>
   </div>
+    </footer>
   <!-- https://stackoverflow.com/questions/9127498/how-to-perform-a-real-time-search-and-filter-on-a-html-table -->
 <script>
 function search_table(){
