--- a/index_backup2.html
+++ b/index_backup2.html
@@ -504,7 +504,16 @@
              <li data-ev="5.6949"><span class="bigfont1" aria-label="ionization energy 5 . 6 9 4 9">5.6949</span></li> 
           </ul>
        </td>
-      <td>Row 5, Cell 3</td>
+       <td id="yttrium" class="solids" tabindex="0">
+            <ul>
+             <li data-atomicnumber="39"><span class="bigfont1" aria-label="atomic number 39">39</span></li>
+             <li data-symbol="y" aria-label="atomic symbol Y " class="bigfont2">Y<span class="letter-tight">&nbsp;</span></li>
+             <li data-element="yttrium"><span class="bigfont1" aria-label="element">Yttrium</span></li>
+             <li data-weight="88.906"><span class="bigfont1" aria-label="standard atomic weight 88 . 9 0 6">88.906</span></li>
+             <li data-groundstate="yttrium"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-ev="6.2173"><span class="bigfont1" aria-label="ionization energy 6 . 2 1 7 3">6.2173</span></li> 
+          </ul>
+       </td>
       <td>Row 5, Cell 4</td>
       <td>Row 5, Cell 5</td>
       <td>Row 5, Cell 6</td>
