--- a/index.html
+++ b/index.html
@@ -514,7 +514,26 @@
              <li data-ev="6.2173"><span class="bigfont1" aria-label="ionization energy 6 . 2 1 7 3">6.2173</span></li> 
           </ul>
        </td>
-      <td>Row 5, Cell 4</td>
+        <td id="zirconium" class="solids" tabindex="0">
+            <ul>
+             <li data-atomicnumber="40"><span class="bigfont1" aria-label="atomic number 40">40</span></li>
+             <li data-symbol="zr" aria-label="atomic symbol Z r " class="bigfont2">Z<span class="letter-tight">r</span></li>
+             <li data-element="zirconium"><span class="bigfont1" aria-label="element">Zirconium</span></li>
+             <li data-weight="91.224"><span class="bigfont1" aria-label="standard atomic weight 91 . 2 2 4">91.224</span></li>
+             <li data-groundstate="zirconium"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-ev="6.6341"><span class="bigfont1" aria-label="ionization energy 6 . 6 3 4 1">6.6341</span></li> 
+          </ul>
+       </td>
+       <td id="niobium" class="solids" tabindex="0">
+            <ul>
+             <li data-atomicnumber="41"><span class="bigfont1" aria-label="atomic number 41">41</span></li>
+             <li data-symbol="N b" aria-label="atomic symbol N b " class="bigfont2">N<span class="letter-tight">b</span></li>
+             <li data-element="niobium"><span class="bigfont1" aria-label="element">Niobium</span></li>
+             <li data-weight="92.906"><span class="bigfont1" aria-label="standard atomic weight 92 . 9 0 6">92.906</span></li>
+             <li data-groundstate="niobium"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-ev="6.7589"><span class="bigfont1" aria-label="ionization energy 6 . 7 5 8 9">6.7589</span></li> 
+          </ul>
+       </td>
       <td>Row 5, Cell 5</td>
       <td>Row 5, Cell 6</td>
       <td>Row 5, Cell 7</td>
